--- a/Training/MCX2024_1A_jupyter_notebook_basics.ipynb
+++ b/Training/MCX2024_1A_jupyter_notebook_basics.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPtpnOztTWbo4OBhD1lEvF/",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyM1jd8f0Qd8ulafN+ZT45nf"
     },
     "kernelspec": {
       "name": "python3",
@@ -17,16 +16,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/COTILab/MCX24Workshop/blob/master/Training/MCX2024_1A_jupyter_notebook_basics.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -42,7 +31,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "> **Training Goals**: <font color='green'>In this document, we go over important guidelines to help you use Google Colab and Jupyter Notebook and familiar yourself with the training material format.</font>"
+        "> **Training Goals**: <font color='green'>In this document, we go over important guidelines to help you use Google Colab and Jupyter Notebook and familiarize yourself with the training material format.</font>"
       ],
       "metadata": {
         "id": "ZYtDub9Mws_k"
@@ -80,11 +69,11 @@
         "\n",
         "In this training, we have prepared all training materials in the form of Jupyter Notebook files (`*.ipynb`) and included our demos, example and user exercises in the notebook.\n",
         "\n",
-        "- One can load and run such notebook files in a [locally run Jupyter Notebook server](https://jupyter.org/install) (`pip install notebook; jupyter notebook`), or\n",
+        "- One can load and run such notebook files in a [locally run Jupyter Notebook server](https://jupyter.org/install) (`python3 -m pip install notebook; python3 -m notebook`), or\n",
         "- One can also load those in a locally run [Google Colab server](https://research.google.com/colaboratory/local-runtimes.html)\n",
         "- They can also be uploaded to Google Drive/Github and run on [Google Colab cloud servers](https://colab.research.google.com/)\n",
         "\n",
-        "Your copy of the notebook is fully editable - and if you save it to Google Drive, your changes are also automatically saved (highly recommended)."
+        "Your copy of the notebook is fully editable - and if you save it to Google Drive, your changes are also automatically saved (highly recommended!)."
       ],
       "metadata": {
         "id": "n2G42f9Gz1S-"
@@ -95,7 +84,11 @@
       "source": [
         "# How to start using each training notebook?\n",
         "\n",
-        "Please download the latest training materials package [from this repository](https://github.com/COTILab/MCX24Workshop/archive/refs/heads/master.zip), unzip it, and upload all `.ipynb` files to a folder named `MCX24` inside your Google Drive.\n",
+        "Please download the latest training materials package [from this repository](https://github.com/COTILab/MCX24Workshop/archive/refs/heads/master.zip), unzip it to a folder.\n",
+        "\n",
+        "Open your browser, type https://colab.research.google.com/, and in the open notebook dialog, select \"New notebook\" at the bottom. This will automatically create a \"Colab Notebooks\" folder under your Google Drive.\n",
+        "\n",
+        "Next, go to your Google Drive, double-click on **\"Colab Notebooks\"** folder, then, drag-drop the unzipped `Training` subfolder (which contains all notebooks) into the \"Colab Notebooks\". After this operation, the folder should look like `Google Drive/Colab Notebooks/Training/MCX24*.ipynb`. Double clicking on any of the MCX24*.ipynb file will open it in Colab and you can run all cells as well as editing codes and taking notes.\n",
         "\n",
         "Saving to Google Drive has two benefits -\n",
         "- you can modify any part of the notebook as you wish and your changes are automatically saved in your Google Drive copy automatically\n",
@@ -122,9 +115,9 @@
       "source": [
         "This training fully utilizes open-source software and environments. Particularly, we use the open-source MATLAB clone, GNU Octave, to avoid the needs of MATLAB licenses. MCXLAB/MMCLAB and nearly all of our MATLAB toolboxes (Iso2Mesh, JSONLab, Brain2Mesh, and Redbird-m) are compatible with both Octave and MATLAB.\n",
         "\n",
-        "At the begining of every all training notebook document, we have a special section <font color=\"orange\">\"Step 0\"</font> that is responsible to set up all needed software components (Octave, MCX suite etc.). You MUST run this section once when\n",
+        "At the begining of every all training notebook document, we have a special section <font color=\"orange\">\"Step 0\"</font> that is responsible for setting up all needed software components (Octave, MCX Suite etc.). You MUST run this section once when\n",
         "- you just open a new document for the first time, or\n",
-        "- your run-time has been disconnected and you just reconnected to a new runtime\n",
+        "- your run-time has been disconnected and you just reconnect to a new runtime\n",
         "\n",
         "without running this section, most of the provided training examples will not run properly."
       ],
@@ -180,6 +173,17 @@
         "! [[ ! -f `which nvidia-smi` ]] && mv \"/usr/local/bin/mcxcl\" \"/usr/local/bin/mcx\"\n",
         "! mcx -L"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "What's happening if you run the above section?\n",
+        "\n",
+        "First, google colab will allocate you a virtual machine with GPU by default. You should see a T4 symbol at the right-top corner of the page if successful. This virtual machine has a customized Ubuntu 22.04 installation - the above commands simply use the package management software on Linux - apt-get and pip to install standard Linux packages and python modules. The second second downloads the latest MCX Suite, including all matlab/octave mex files and executables, and setup the environment so that you can run them."
+      ],
+      "metadata": {
+        "id": "5yQCeufECrh2"
+      }
     },
     {
       "cell_type": "markdown",
@@ -252,6 +256,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Please be aware that each type of the above enviroment is a separate system, and they do not see variables in each other, but mutiple cells of the same kind do share the same environment. As a result, all Octave variables are persistant between multiple Octave cells, or Python variables are visible among all Python cells etc.**"
+      ],
+      "metadata": {
+        "id": "uTqKp_32DdFu"
+      }
     },
     {
       "cell_type": "markdown",
