add steve's update

--- a/Training/MCX2024_1D_mcxlab_training.ipynb
+++ b/Training/MCX2024_1D_mcxlab_training.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyN3M8vpTD0sUPNzd3lfbzXt",
+      "authorship_tag": "ABX9TyMtovaE/Hcd4+NfZo0Z8dSv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,7 +64,7 @@
         "\n",
         "<font color='green'>If you run this on Google Colab, please go to menu **Edit\\Notebook Settings\\Hardware accelerator**, and verify if it has already selected \"GPU\"; if not, please select the T4 GPU.</font>\n",
         "\n",
-        "**Please note**: MCX/MCXLAB is GPU-accelerated. This notebook by default requests an NVIDIA GPU. Howevever, when you click on the run-button for the below section, your browser may fail to allocate a GPU runtime and ask you if you want to continue with a non-GPU runtime. If you choose to proceed without GPU support, you will have to run the [section immediately following the next section](#mcx_setup_opencl) to install OpenCL-based MCXLAB (called mcxlabcl) and utilize the CPU to run the rest of the tutorials. The OpenCL version of MCXLAB will work for all examples, but will be substentially slower to run (this tutorial also reduces the photon numbers accordingly to lower the runtime)."
+        "**Please note**: MCX/MCXLAB is GPU-accelerated. This notebook by default requests an NVIDIA GPU. Howevever, when you click on the run-button for the below section, your browser may fail to allocate a GPU runtime and ask you if you want to continue with a non-GPU runtime. If you choose to proceed without GPU support, the script will install OpenCL-based MCXLAB (called `mcxlabcl`) and utilize the CPU to run the rest of the tutorials. The OpenCL version of MCXLAB will work for all examples, but will be substentially slower to run (this tutorial also reduces the photon numbers accordingly to lower the runtime)."
       ],
       "metadata": {
         "id": "2S9sY9AlHwdm"
@@ -369,10 +369,10 @@
         "\n",
         "%% define domain in the form of a labeled volume - each voxel is an integer denoting tissue type ID\n",
         "cfg.vol=uint8(zeros(60,60,60));    % define a label-based volume - each voxel has a integer defining the medium type\n",
-        "cfg.vol(2:end-1,2:end-1,2:end-1)=1;% define a label-based volume - each voxel has a integer defining the medium type\n",
+        "cfg.vol(2:end-1,2:end-1,2:end-1)=1;% define a volume - a layer of zero is padded at all 6 bounding box faces in order to save diffuse reflectance\n",
         "cfg.vol(20:40, 30:40, 20:30)=2;    % adding an inclusion by setting to a different label\n",
         "\n",
-        "%% save diffuse reflectanct at z=0 plane - total light escaped from the bottom plane\n",
+        "%% save diffuse reflectanct at all bounding box faces, storing total light escaped from each facet\n",
         "cfg.issaveref=1;                   % save diffuse reflectance - can only save to the 0-valued voxel next to a boundary\n",
         "\n",
         "%% the below two settings allow us to verify energy-conservation in MCX\n",
@@ -468,9 +468,9 @@
         "   - when `cfg.srcdir(4)` < 0, it simulates a divergent beam, with the virtual focal point at `C0 + cfg.srcdir(1:3)*focallength` (note focallength is negative)\n",
         "   - when `cfg.srcdir(4) = nan`, mcx isotropically launch photon at every point on the source with equal probability\n",
         "   - when `cfg.srcdir(4) = -inf`, mcx launch photon using the Lambertian profile (cosine distribution) at every point on the source aperture\n",
-        "- Also, the 4th element of `cfg.srcpos` controls the initial weight of each launched photon for sources that have a uniform weight (such as pencil, cone, disk, planar etc), but not sources whos weight are computed (such as \"fourier\", \"fourierx\", \"pattern\" or \"pattern3d\").\n",
+        "- Also, the 4th element of `cfg.srcpos` controls the initial weight of each launched photon for sources that have a uniform weight (such as pencil, cone, disk, planar etc), but not sources whos weight are computed (such as `\"fourier\", \"fourierx\", \"pattern\" or \"pattern3d\"`).\n",
         "   - the ability to simulate negative sources, despite it does not exist in physical world, allows one to conveniently analyze complex pattern sources such as Fourier or Hadamard which contains both positive and negative values\n",
-        "- Finally, the photon launch angle control can be fully customized by defining the `cfg.angleinvcdf` 1D vector, which defines the discrete form of the inverse of the \"**cummulative density function**\" (i.e. CDF$^{-1}(\\theta)$, where CDF($\\theta$) =$\\int PDF(x <=\\theta)dx$) of the launch angle (zenith-angle relative to `cfg.srcdir(1:3)`) distribution. [see example](https://github.com/fangq/mcx/blob/master/mcxlab/examples/demo_mcxlab_launchangle.m)\n",
+        "- Finally, the photon launch angle control can be fully customized by defining the `cfg.angleinvcdf` 1D vector, which defines the discrete form of the inverse of the \"**cummulative density function**\" (i.e. CDF$^{-1}(\\theta)$, where CDF($\\theta$) =$\\int PDF(x \\le\\theta)dx$) of the launch angle (zenith-angle relative to `cfg.srcdir(1:3)`) distribution. [see example](https://github.com/fangq/mcx/blob/master/mcxlab/examples/demo_mcxlab_launchangle.m)\n",
         "  - when `cfg.angleinvcdf` is set, and focal-length `cfg.srcdir(4)` is set to 1, the angle distribution is treated as discrete distribution without interpolation\n",
         "  - when `cfg.angleinvcdf` is set, and focal-length `cfg.srcdir(4)` is set to 0, the angle distribution is linearly interpolated between neighboring values."
       ],
@@ -536,7 +536,7 @@
       "source": [
         "`cfg.debugflag='T'` is a newly added (v2024.2) flag to only return the photon trajectory data (as the first output of mcxlab). It is designed for debugging and training purpose.\n",
         "\n",
-        "In comparison, `cfg.debugflag='M'` also saves photon trajectory, but output it as the 5th output, while also returning other outputs - flux, detp, seed etc."
+        "In comparison, `cfg.debugflag='M'` also saves photon trajectory, but output it as the 5th output, while also returning other outputs - `flux, detp, seed` etc."
       ],
       "metadata": {
         "id": "POSTjorRGKHj"
@@ -1047,7 +1047,7 @@
       "source": [
         "%%octave\n",
         "\n",
-        "% runMCXspectrum_Skin29aprWorkshop.m\n",
+        "% runMCXspectrum.m\n",
         "%   Simulation of skin reflectance and transmittance\n",
         "%   from a layered skisn:\n",
         "%       epidermis           60 um\n",
@@ -1072,9 +1072,9 @@
         "% USER CHOICES\n",
         "%%%\n",
         "\n",
-        "%%%%%%\n",
-        "%# @markdown wavelength step size (in nm)\n",
-        "nmstep=10 # @param {type:\"slider\",min:10,max:100,step:10}\n",
+        "# %%%%%%\n",
+        "# %# @markdown wavelength step size (in nm)\n",
+        "nmstep=10\n",
         "\n",
         "nm = [300:nmstep:1000]';\n",
         "Nnm = length(nm);\n",
@@ -1116,16 +1116,15 @@
         "    % specify tissue layer properties\n",
         "    PRINTON=0;\n",
         "    tissue = makeTissueList_skin(nm1, MU2(inm,:), PRINTON);\n",
+        "    A = 0.01; % background absorption [1/mm]\n",
         "    prop(1,:)=[0 0 1 1]; % outer boundary [mua mus g n]\n",
-        "\n",
         "    for i=1:4 % epi pap plx ret\n",
-        "        mua = tissue(i).mua;\n",
+        "        mua = tissue(i).mua + A;\n",
         "        mus = tissue(i).mus;\n",
         "        g   = tissue(i).g;\n",
         "        n   = tissue(i).n;\n",
         "        prop(i+1,:) = [mua mus g n];\n",
         "    end\n",
-        "\n",
         "    prop(5+1,:) = [mua*1e3 mus*1e3 g n];% 6=mimic semi-infinite dermis\n",
         "        % 2=epidermis\n",
         "        % 3=papillary dermis\n",
