--- a/Training/MCX2024_1E_pmcx_training.ipynb
+++ b/Training/MCX2024_1E_pmcx_training.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,9 +57,7 @@
         "\n",
         "> **You must rerun all cells in Step 0 in appearance order when you start a new session, or after reconnect to a runtime**\n",
         "\n",
-        "<font color='green'>If you run this on Google Colab, please go to menu **Edit\\Notebook Settings\\Hardware accelerator**, and verify if it has already selected \"GPU\"; if not, please select the T4 GPU.</font>\n",
-        "\n",
-        "**Please note**: MCX/MCXLAB is GPU-accelerated. This notebook by default requests an NVIDIA GPU. Howevever, when you click on the run-button for the below section, your browser may fail to allocate a GPU runtime and ask you if you want to continue with a non-GPU runtime. If you choose to proceed without GPU support, you will have to run the [section immediately following the next section](#mcx_setup_opencl) to install OpenCL-based MCXLAB (called mcxlabcl) and utilize the CPU to run the rest of the tutorials. The OpenCL version of MCXLAB will work for all examples, but will be substentially slower to run (this tutorial also reduces the photon numbers accordingly to lower the runtime)."
+        "<font color='green'>If you run this on Google Colab, please go to menu **Edit\\Notebook Settings\\Hardware accelerator**, and verify if it has already selected \"GPU\"; if not, please select the T4 GPU.</font>"
       ],
       "metadata": {
         "id": "nFC-vAnD6HuW"
@@ -534,7 +533,7 @@
         "# Exec 3 - Replay in photon simulation\n",
         "In this example, we will show the replay in photon simulations. Replay involves storing photon paths and previously recorded seeds. By saving the seeds, replay can create Jacobians matrix for absorption and scattering coefficients, which is crucial for applications like diffuse optical tomography (DOT).\n",
         "\n",
-        "![Photon replay](https://opg.optica.org/getimagev2.cfm?img=gn%2B3%2Fk27EUBH1o4wZKu2dSIRvRy2Zv%2FXywcVAYmGSyU%3D&size=full&uri=boe-9-10-4588-g001)\n",
+        "![Photon replay](https://mcx.space/wiki/upload/replay_workflow.svg)\n",
         "\n",
         "We will cover the following topics:\n",
         "* <b>Use replay to generate the Jaobian matrix: </b></br>\n",
@@ -732,7 +731,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
